--- a/src/HLA.CSSMS/Client/App.razor
+++ b/src/HLA.CSSMS/Client/App.razor
@@ -6,7 +6,7 @@
                     <p role="alert">You are not authorized to access this resource.</p>
                 </NotAuthorized>
                 <Authorizing>
-                    <div>Authorizing...</div>
+                    <div><span class="loading"></span></div>
                 </Authorizing>
             </AuthorizeRouteView>
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
