--- a/src/HLA.CSSMS/Client/Pages/Admin/UserAccounts.razor
+++ b/src/HLA.CSSMS/Client/Pages/Admin/UserAccounts.razor
@@ -26,7 +26,7 @@
         }
         else
         {
-            if (!isInAccountEditMode)
+            if (mode == 0)
             {
                 <div class="row">
                     <div class="col-12 mb-2">
@@ -39,6 +39,9 @@
                             </button>
                             <button class="btn btn-primary btn-smc" @onclick="(() => DeleteUser())">
                                 <span class="oi oi-trash"></span>
+                            </button>
+                            <button class="btn btn-primary btn-smc" @onclick="ChangeUserPassword">
+                                <span class="oi oi-key"></span>
                             </button>
                             <button class="btn btn-primary btn-smc" @onclick="(() => ReLoad())">
                                 <span class="oi oi-reload"></span>
@@ -60,7 +63,7 @@
                     </SfGrid>
                 </div>
             }
-            if (isInAccountEditMode)
+            else if (mode == 1)
             {
                 <div class="card">
                     <div class="card-header">Edit/Add User</div>
@@ -134,6 +137,49 @@
                                         <span class="oi oi-cloud-upload"></span> Save
                                     </button>
                                     <button class="btn btn-primary btn-sm" @onclick="CancelEdit">
+                                        <span class="oi oi-action-undo"></span> Cancel
+                                    </button>
+                                </div>
+                            </div>
+                        </EditForm>
+                    </div>
+                </div>
+            }
+            else if (mode == 2)
+            {
+                <div class="card">
+                    <div class="card-header">Change User Password</div>
+                    <div class="card-body">
+                        <EditForm Model="changePasswordDto" OnValidSubmit="UpdateUserPassword" Context="formContext">
+                            <DataAnnotationsValidator />
+                            <div class="row">
+                                <div class="col-6 mb-2">
+                                    <label for="username">UserName</label>
+                                    <InputText id="username" @bind-Value="changePasswordDto.UserName" class="form-control" readonly></InputText>
+                                </div>
+                                <div class="col-6 mb-2">
+                                    <label for="email">Email</label>
+                                    <InputText id="email" @bind-Value="changePasswordDto.Email" class="form-control" readonly></InputText>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-6 mb-3">
+                                    <label for="password">Password</label>
+                                    <InputText id="password" @bind-Value="changePasswordDto.Password" class="form-control" type="password" />
+                                    <ValidationMessage For="@(() => changePasswordDto.Password)" />
+                                </div>
+                                <div class="col-sm-6 mb-3">
+                                    <label for="confirmPassword">Confirm Password</label>
+                                    <InputText id="confirmPassword" @bind-Value="changePasswordDto.ConfirmPassword" class="form-control" type="password" />
+                                    <ValidationMessage For="@(() => changePasswordDto.ConfirmPassword)" />
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="text-end">
+                                    <button type="submit" class="btn btn-primary btn-sm">
+                                        <span class="oi oi-cloud-upload"></span> Save
+                                    </button>
+                                    <button class="btn btn-primary btn-sm" @onclick="CancelChangeUserPassword">
                                         <span class="oi oi-action-undo"></span> Cancel
                                     </button>
                                 </div>
