--- a/src/HLA.CSSMS/Client/Shared/MainLayout.razor.css
+++ b/src/HLA.CSSMS/Client/Shared/MainLayout.razor.css
@@ -13,6 +13,7 @@ main {
 }
 
 .top-row {
+    background-color: white;
     border-bottom: 2px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
