--- a/src/HLA.CSSMS/Client/Pages/IMS/Submission/IMSSubmissionsList.razor
+++ b/src/HLA.CSSMS/Client/Pages/IMS/Submission/IMSSubmissionsList.razor
@@ -54,10 +54,10 @@
                     </div>
                     <div class="col-2 mb-2">
                         <div class="text-end">
-                            <button class="btn btn-primary btn-smc" @onclick="(() => ViewError())">
+                            <button class="btn btn-primary btn-smc" title="View Submission Case" @onclick="(() => ViewError())">
                                 <span class="oi oi-eye"></span>
                             </button>
-                            <button class="btn btn-primary btn-smc" @onclick="(() => ReLoad())">
+                            <button class="btn btn-primary btn-smc" title="Refresh" @onclick="(() => ReLoad())">
                                 <span class="oi oi-reload"></span>
                             </button>
                         </div>
