--- a/src/HLA.CSSMS/Client/Shared/NavMenu.razor
+++ b/src/HLA.CSSMS/Client/Shared/NavMenu.razor
@@ -15,7 +15,7 @@
             <Authorized>
                 <div class="nav-item px-1">
                     <NavLink class="nav-link" @onclick="()=>expandImsSubMenu = !expandImsSubMenu">
-                        <span class="oi oi-file" aria-hidden="true"></span> IMS / eApp
+                        <span class="oi oi-book" aria-hidden="true"></span> IMS / eApp
                         <div class="text-lg-end" style="margin-left:auto">
                             @if (expandImsSubMenu)
                             {
@@ -31,7 +31,7 @@
                     {
                         <div class="nav-item px-3">
                             <NavLink class="nav-link" href="ims/submission/list">
-                                <span aria-hidden="true"></span> Submissions
+                                <span class="oi oi-file" aria-hidden="true"></span> Submissions
                             </NavLink>
                         </div>
                     }
