--- a/src/HLA.CSSMS/Client/Shared/NavMenu.razor
+++ b/src/HLA.CSSMS/Client/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div>
-    <img style="width:15%;margin-left:10px;margin-top:10px" src="icon/logo1.svg" />
-    <img style="width:75%;margin-top:15px" src="icon/logo.png" />
+    <img src="icon/logo1.svg" class="hla-logo"/>
+    <img src="icon/logo.png" class="hla-logo-word"/>
 </div>
 
 <div class="@NavMenuCssClass">
