--- a/src/HLA.CSSMS/Client/Pages/Admin/UserAccounts.razor
+++ b/src/HLA.CSSMS/Client/Pages/Admin/UserAccounts.razor
@@ -191,6 +191,6 @@
         }
     </Authorized>
     <NotAuthorized>
-        <p>You're not authorized to view this page.</p>
+        <p role="alert">You are not authorized or session expired. Please login and try again. Thank you!</p>
     </NotAuthorized>
 </AuthorizeView>
