--- a/src/HLA.CSSMS/Client/Pages/UserPages/Login.razor
+++ b/src/HLA.CSSMS/Client/Pages/UserPages/Login.razor
@@ -41,6 +41,11 @@
     private string hideLogin = isShowLogin(true);
     bool isShow;
 
+    protected override async Task OnInitializedAsync()
+    {
+        await AuthService.Logout();
+    }
+
     private async Task HandleLogin()
     {
         ShowErrors = false;
