--- a/src/HLA.CSSMS/Client/Pages/UserPages/Register.razor
+++ b/src/HLA.CSSMS/Client/Pages/UserPages/Register.razor
@@ -2,49 +2,59 @@
 
 <h3>Register</h3>
 
-<EditForm Model="user" OnValidSubmit="@HandleRegistration">
-    <DataAnnotationsValidator />
-    <div class="row">
-        <div class="col-sm-6 mb-3">
-            <label for="firstName">First Name</label>
-            <InputText id="firstName" @bind-Value="user.FirstName" class="form-control" />
-            <ValidationMessage For="@(() => user.FirstName)" />
+@if (showLoading)
+{
+    <span class="loading"></span>
+}
+else
+{
+    <EditForm Model="user" OnValidSubmit="@HandleRegistration">
+        <DataAnnotationsValidator />
+        <div class="row">
+            <div class="col-sm-6 mb-3">
+                <label for="firstName">First Name</label>
+                <InputText id="firstName" @bind-Value="user.FirstName" class="form-control" />
+                <ValidationMessage For="@(() => user.FirstName)" />
+            </div>
+            <div class="col-sm-6 mb-3">
+                <label for="lastName">Surname</label>
+                <InputText id="lastName" @bind-Value="user.LastName" class="form-control" />
+                <ValidationMessage For="@(() => user.LastName)" />
+            </div>
         </div>
-        <div class="col-sm-6 mb-3">
-            <label for="lastName">Surname</label>
-            <InputText id="lastName" @bind-Value="user.LastName" class="form-control" />
-            <ValidationMessage For="@(() => user.LastName)" />
+        <div class="mb-3">
+            <label for="displayName">Display name</label>
+            <InputText id="displayName" @bind-Value="user.DisplayName" class="form-control" />
+            <ValidationMessage For="@(() => user.DisplayName)" />
         </div>
-    </div>
-     <div class="mb-3">
-        <label for="displayName">Display name</label>
-        <InputText id="displayName" @bind-Value="user.DisplayName" class="form-control" />
-        <ValidationMessage For="@(() => user.DisplayName)" />
-    </div>
 
-    <div class="mb-3">
-        <label for="email">Email</label>
-        <InputText id="email" @bind-Value="user.Email" class="form-control" />
-        <ValidationMessage For="@(() => user.Email)" />
-    </div>
-
-    <div class="row">
-        <div class="col-sm-6 mb-3">
-            <label for="password">Password</label>
-            <InputText id="password" @bind-Value="user.Password" class="form-control" type="password" />
-            <ValidationMessage For="@(() => user.Password)" />
+        <div class="mb-3">
+            <label for="email">Email</label>
+            <InputText id="email" @bind-Value="user.Email" class="form-control" />
+            <ValidationMessage For="@(() => user.Email)" />
         </div>
-        <div class="col-sm-6 mb-3">
-            <label for="confirmPassword">Confirm Password</label>
-            <InputText id="confirmPassword" @bind-Value="user.ConfirmPassword" class="form-control" type="password" />
-            <ValidationMessage For="@(() => user.ConfirmPassword)" />
+
+        <div class="row">
+            <div class="col-sm-6 mb-3">
+                <label for="password">Password</label>
+                <InputText id="password" @bind-Value="user.Password" class="form-control" type="password" />
+                <ValidationMessage For="@(() => user.Password)" />
+            </div>
+            <div class="col-sm-6 mb-3">
+                <label for="confirmPassword">Confirm Password</label>
+                <InputText id="confirmPassword" @bind-Value="user.ConfirmPassword" class="form-control" type="password" />
+                <ValidationMessage For="@(() => user.ConfirmPassword)" />
+            </div>
         </div>
-    </div>
 
-    
-    <button type="submit" class="btn btn-primary w-100">Register</button>
+        <div class="text-end" style="margin-top:5px">
+            <button type="submit" class="btn btn-primary btn-sm">
+                <span class="oi oi-check"></span> Register
+            </button>
+        </div>
 
-    <div class="@messageCssClass">
-        <span>@message</span>
-    </div>
-</EditForm>
+        <div class="@messageCssClass">
+            <span>@message</span>
+        </div>
+    </EditForm>
+}
